--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "nodemon": "^3.1.0",
     "prisma": "^5.14.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "yup": "^1.4.0"
   }
 }
