:sparkles: create authentication and authorize services, :wrench:  revise database relation

--- a/server/.env
+++ b/server/.env
@@ -7,3 +7,8 @@
 # Allow in gitignore for testing
 DATABASE_URL="postgresql://root:P@ssword@localhost:5432/app" 
 PORT=8000
+
+JWT_ACCESS_SECRET="example-secret-key"
+JWT_REFRESH_SECRET="example-secret-for-refresh-key"
+
+EXPRESS_SESSION_SECRET="example-secret-for-express-session-key"
