--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,15 @@ services:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PW}
       - POSTGRES_DB=${POSTGRES_DB}
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U {$POSTGRES_USER}"]
+      interval: 10s
+      timeout: 3s
+      retries: 3
     ports:
       - "5432:5432"
+    volumes:
+      - pgdata:/var/lib/postgresql/data
     restart: always
 
   pgadmin:
@@ -19,3 +26,27 @@ services:
     ports:
       - "5050:80"
     restart: always
+
+  backend:
+    container_name: server
+    build: ./server
+    environment:
+      - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PW}@postgres:5432/${POSTGRES_DB}
+    ports:
+      - "8000:8000"
+    depends_on:
+      postgres:
+        condition: service_healthy
+    command: ["npm", "run", "deploy"]
+
+  frontend:
+    container_name: client
+    build: ./client
+    ports:
+      - "3000:3000"
+    depends_on:
+      postgres:
+        condition: service_healthy
+        
+volumes:
+  pgdata:
