--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,14 +39,14 @@ services:
         condition: service_healthy
     command: ["npm", "run", "deploy"]
 
-  frontend:
-    container_name: client
-    build: ./client
-    ports:
-      - "3000:3000"
-    depends_on:
-      postgres:
-        condition: service_healthy
+  # frontend:
+  #   container_name: client
+  #   build: ./client
+  #   ports:
+  #     - "3000:3000"
+  #   depends_on:
+  #     postgres:
+  #       condition: service_healthy
         
 volumes:
   pgdata:
